Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P0: Blocker
-
Resolution: Done
-
Affects Version/s: 5.14.0 Alpha
-
Fix Version/s: 5.14.0 Alpha
-
Component/s: WebSockets
-
Labels:None
-
Platform/s:
-
Commits:72e490269bba05f8c5841bb58f1ef57e14a7f79f (qt/qtwebsockets/5.14)
Description
https://codereview.qt-project.org/c/qt/qt5/+/269475 Merge remote-tracking branch 'origin/5.13' into dev - PS9
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1565723762
agent:2019/08/13 19:33:14 build.go:215: em++ -c -O3 -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -s ALLOW_MEMORY_GROWTH=1 -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_WEBSOCKETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I..\..\include -I..\..\include\QtWebSockets -I..\..\include\QtWebSockets\5.14.0 -I..\..\include\QtWebSockets\5.14.0\QtWebSockets -Ic:\Users\qt\work\install\include\QtCore\5.14.0 -Ic:\Users\qt\work\install\include\QtCore\5.14.0\QtCore -Ic:\Users\qt\work\install\include -Ic:\Users\qt\work\install\include\QtNetwork -Ic:\Users\qt\work\install\include\QtCore -I.moc -Ic:\Users\qt\work\install\mkspecs\wasm-emscripten -o .obj\qwebsocketdataprocessor.obj qwebsocketdataprocessor.cpp agent:2019/08/13 19:33:15 build.go:215: em++ -c -O3 -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -s ALLOW_MEMORY_GROWTH=1 -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_WEBSOCKETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I..\..\include -I..\..\include\QtWebSockets -I..\..\include\QtWebSockets\5.14.0 -I..\..\include\QtWebSockets\5.14.0\QtWebSockets -Ic:\Users\qt\work\install\include\QtCore\5.14.0 -Ic:\Users\qt\work\install\include\QtCore\5.14.0\QtCore -Ic:\Users\qt\work\install\include -Ic:\Users\qt\work\install\include\QtNetwork -Ic:\Users\qt\work\install\include\QtCore -I.moc -Ic:\Users\qt\work\install\mkspecs\wasm-emscripten -o .obj\qwebsocketcorsauthenticator.obj qwebsocketcorsauthenticator.cpp agent:2019/08/13 19:33:16 build.go:215: qwebsockethandshakeresponse.cpp:165:80: error: too few template arguments for class template 'less' agent:2019/08/13 19:33:16 build.go:215: listIntersection(supportedProtocols, request.protocols(), std::less<>()); agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: C:\Utils\emsdk\emscripten-1.38.27\system\include\libcxx\__functional_base:51:29: note: template is declared here agent:2019/08/13 19:33:16 build.go:215: struct _LIBCPP_TEMPLATE_VIS less : binary_function<_Tp, _Tp, bool> agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: qwebsockethandshakeresponse.cpp:169:82: error: too few template arguments for class template 'less' agent:2019/08/13 19:33:16 build.go:215: listIntersection(supportedExtensions, request.extensions(), std::less<>()); agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: C:\Utils\emsdk\emscripten-1.38.27\system\include\libcxx\__functional_base:51:29: note: template is declared here agent:2019/08/13 19:33:16 build.go:215: struct _LIBCPP_TEMPLATE_VIS less : binary_function<_Tp, _Tp, bool> agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: qwebsockethandshakeresponse.cpp:171:78: error: too few template arguments for class template 'greater' agent:2019/08/13 19:33:16 build.go:215: listIntersection(supportedVersions, request.versions(), std::greater<>()); //sort in descending order agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: C:\Utils\emsdk\emscripten-1.38.27\system\include\libcxx\functional:720:29: note: template is declared here agent:2019/08/13 19:33:16 build.go:215: struct _LIBCPP_TEMPLATE_VIS greater : binary_function<_Tp, _Tp, bool> agent:2019/08/13 19:33:16 build.go:215: ^ agent:2019/08/13 19:33:16 build.go:215: 3 errors generated. agent:2019/08/13 19:33:16 build.go:215: shared:ERROR: compiler frontend failed to generate LLVM bitcode, halting