Prospective fix for compilation with WebAssembly/MinGW73

Pass a template argument to std::less/greater.

Amends 54ffd0d0a3bf2c77d53e1cdfe04b362f59682cb4.

Fixes: QTBUG-77500
Change-Id: I0b78906090d8b0e3c910104975c08ff79ba9fc12
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>